--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
