--- a/backend/package.json
+++ b/backend/package.json
@@ -22,16 +22,16 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
-    "nodemailer": "^7.0.5"
-  },
-  "devDependencies": {
+    "nodemailer": "^7.0.5",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.3.0",
-    "@types/nodemailer": "^7.0.1",
     "@types/ms": "^2.1.0",
+    "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.1"
+  },
+  "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
